--- a/index.html
+++ b/index.html
@@ -695,16 +695,16 @@
           'reflective and atmospheric';
 
       var prompt = 'You are writing segment ' + segmentNumber + ' of an ongoing ' + state.genre + ' story. This is a story for a runner, and they have been running at ' + avgSpeed.toFixed(1) + ' mph, so make this segment accurate to the speed. It should be in second person with me as the main character, almost like roleplay.\n\n'
-        if(segmentNumber === 1) prompt +='This is the BEGINNING of the story. Introduce the main character and setting in an engaging way. End with a hook that makes them want to keep driving for the next part. Write 18-20 paragraphs.'
-        else{
-            var sums = "Continue the story with rising action. Reference what happened before naturally. End with a cliffhanger or exciting moment. Write 18-20 paragraphs.\n\nhere is the story so far: ";
-            for(let i = 0; i< state.storySegments.length; i++ ){
-              sums += "Chapter " + i + ": " + state.storySegments[i].summary + ", ";
-            }
-            prompt += sums;
-        }   
-        prompt += '\n\nWrite ONLY the story segment, no meta-commentary. Make it exciting and match the driving speed!';
-        
+      if (segmentNumber === 1) prompt += 'This is the BEGINNING of the story. Introduce the main character and setting in an engaging way. End with a hook that makes them want to keep driving for the next part. Write 18-20 paragraphs.'
+      else {
+        var sums = "Continue the story with rising action. Reference what happened before naturally. End with a cliffhanger or exciting moment. Write 18-20 paragraphs.\n\nhere is the story so far: ";
+        for (let i = 0; i < state.storySegments.length; i++) {
+          sums += "Chapter " + i + ": " + state.storySegments[i].summary + ", ";
+        }
+        prompt += sums;
+      }
+      prompt += '\n\nWrite ONLY the story segment, no meta-commentary. Make it exciting and match the driving speed!';
+
       try {
         alert(prompt);
         const response = await fetch('https://generativelanguage.googleapis.com/v1beta/models/gemini-2.0-flash:generateContent?key=' + state.apiKey, {
@@ -728,44 +728,49 @@
         }
 
         storyText = data.candidates[0].content.parts[0].text;
-        const response2 = await fetch('https://generativelanguage.googleapis.com/v1beta/models/gemini-2.0-flash:generateContent?key=' + state.apiKey, {
-          method: 'POST',
-          headers: {
-            'Content-Type': 'application/json',
-          },
-          body: JSON.stringify({
-            contents: [{
-              parts: [{
-                text: "Summarize this chapter:" + storyText
+        setTimeout(async () => {
+
+          const response2 = await fetch('https://generativelanguage.googleapis.com/v1beta/models/gemini-2.0-flash:generateContent?key=' + state.apiKey, {
+            method: 'POST',
+            headers: {
+              'Content-Type': 'application/json',
+            },
+            body: JSON.stringify({
+              contents: [{
+                parts: [{
+                  text: "Summarize this chapter:" + storyText
+                }]
               }]
-            }]
-          })
-        });
-        const newSegment = {
-          segment: segmentNumber,
-          text: storyText,
-          summary: await response2.json().candidates[0].content.parts[0].text,
-          speed: avgSpeed,
-          timestamp: new Date().toLocaleTimeString()
-        };
-
-        state.storySegments.push(newSegment);
-        displayStorySegment(newSegment);
-
-        saveState();
-
-        if (state.notificationsEnabled && 'Notification' in window) {
-          const preview = storyText.slice(0, 100) + '...';
-          new Notification('📖 Story Segment ' + segmentNumber + ' Ready!', {
-            body: preview,
-            vibrate: [200, 100, 200],
-            tag: 'story-segment'
+            })
           });
-        }
+          var sum = await response2.json();
+          sum = sum.candidates[0].content.parts[0].text
+          const newSegment = {
+            segment: segmentNumber,
+            text: storyText,
+            summary: sum,
+            speed: avgSpeed,
+            timestamp: new Date().toLocaleTimeString()
+          };
 
-        if (state.isTTSEnabled) {
-          speakText(storyText);
-        }
+          state.storySegments.push(newSegment);
+          displayStorySegment(newSegment);
+
+          saveState();
+
+          if (state.notificationsEnabled && 'Notification' in window) {
+            const preview = storyText.slice(0, 100) + '...';
+            new Notification('📖 Story Segment ' + segmentNumber + ' Ready!', {
+              body: preview,
+              vibrate: [200, 100, 200],
+              tag: 'story-segment'
+            });
+          }
+
+          if (state.isTTSEnabled) {
+            speakText(storyText);
+          }
+        }, 200)
       } catch (error) {
         console.error('Error generating story:', error);
         alert('Error generating story: ' + error.message + '\n\nPlease check your API key.');
@@ -792,15 +797,15 @@
         method: 'POST',
         body: text,
       });
-      
+
       au.src = await response.text();
       document.body.appendChild(au);
       au.play();
       var toggle = document.querySelector("#resetBtn").cloneNode(true);
       toggle.id = "toggle";
       toggle.innerText = "Toggle Audio";
-      toggle.onclick = ()=> {
-        if(au.paused) au.play();
+      toggle.onclick = () => {
+        if (au.paused) au.play();
         else au.pause();
       }
       document.querySelector(".buttons").appendChild(toggle);
