--- a/index.html
+++ b/index.html
@@ -8,7 +8,6 @@
   <link rel="manifest" href="manifest.json">
   <script src="https://js.puter.com/v2/"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/localforage/1.10.0/localforage.min.js"></script>
-  <script src="https://code.responsivevoice.org/responsivevoice.js?key=Qa0t9Y6n"></script>
   <style>
     * {
       margin: 0;
@@ -706,7 +705,6 @@
       prompt += '\n\nWrite ONLY the story segment, no meta-commentary. Make it exciting and match the driving speed!';
 
       try {
-        alert(prompt);
         const response = await fetch('https://generativelanguage.googleapis.com/v1beta/models/gemini-2.0-flash:generateContent?key=' + state.apiKey, {
           method: 'POST',
           headers: {
@@ -745,6 +743,7 @@
           });
           var sum = await response2.json();
           sum = sum.candidates[0].content.parts[0].text
+          alert(sum);
           const newSegment = {
             segment: segmentNumber,
             text: storyText,
