--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
   <link rel="manifest" href="manifest.json">
   <script src="https://js.puter.com/v2/"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/localforage/1.10.0/localforage.min.js"></script>
+  <script src="https://code.responsivevoice.org/responsivevoice.js?key=Qa0t9Y6n"></script>
   <style>
     * {
       margin: 0;
@@ -17,7 +18,7 @@
 
     body {
       font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, sans-serif;
-      background: linear-gradient(135deg, #ea6666 0%, #a24b4e 100%);
+      background: linear-gradient(135deg, #667eea 0%, #764ba2 100%);
       min-height: 100vh;
       padding: 20px;
     }
@@ -103,7 +104,7 @@
     }
 
     .genre-select option {
-      background: #a24e4b;
+      background: #764ba2;
       color: white;
     }
 
@@ -217,8 +218,8 @@
     }
 
     .permissions-box {
-      background: rgba(246, 115, 59, 0.2);
-      border: 2px solid rgba(246, 78, 59, 0.3);
+      background: rgba(59, 130, 246, 0.2);
+      border: 2px solid rgba(59, 130, 246, 0.3);
       border-radius: 10px;
       padding: 20px;
       margin-top: 20px;
@@ -413,7 +414,7 @@
       <div id="generatingIndicator" style="display: none;" class="generating">
         ✨ Generating your story segment...
       </div>
-      <div id="generatingAudioIndicator" style="display: none;" class="generating">
+       <div id="generatingAudioIndicator" style="display: none;" class="generating">
         ✨ Generating your story segment's TTS...
       </div>
     </div>
@@ -693,16 +694,11 @@
         avgSpeed > 3 ? 'moderate tension' :
           'reflective and atmospheric';
 
-      var prompt = 'You are writing segment ' + segmentNumber + ' of an ongoing ' + state.genre + ' story. This is a story for a runner, and they have been running at ' + avgSpeed.toFixed(1) + ' mph, so make this segment accurate to the speed. It should be in second person with me as the main character, almost like roleplay.\n\n'
-      if (segmentNumber === 1) prompt += 'This is the BEGINNING of the story. Introduce the main character and setting in an engaging way. End with a hook that makes them want to keep driving for the next part. Write 18-20 paragraphs.'
-      else {
-        var sums = "Continue the story with rising action. Reference what happened before naturally. End with a cliffhanger or exciting moment. Write 18-20 paragraphs.\n\nhere is the story so far: ";
-        for (let i = 0; i < state.storySegments.length; i++) {
-          sums += "Chapter " + i + ": " + state.storySegments[i].summary + ", ";
-        }
-        prompt += sums;
-      }
-      prompt += '\n\nWrite ONLY the story segment, no meta-commentary. Make it exciting and match the driving speed!';
+      const prompt = 'You are writing segment ' + segmentNumber + ' of an ongoing ' + state.genre + ' story. This is a story for a runner, and they have been running at ' + avgSpeed.toFixed(1) + ' mph, so make this segment ' + paceDescription + '. It should be in second person with me as the main character, almost like roleplay.\n\n' +
+        (segmentNumber === 1 ?
+          'This is the BEGINNING of the story. Introduce the main character and setting in an engaging way. End with a hook that makes them want to keep running for the next part. Write 18-20 paragraphs.' :
+          'This is segment ' + segmentNumber + '. Continue the story with rising action. Reference what happened before naturally. End with a cliffhanger or exciting moment. Write 18-20 paragraphs.\n\nHere is the story so far, which you will continue on: ' + storyText
+        ) + '\n\nWrite ONLY the story segment, no meta-commentary. Make it exciting and match the running pace!';
 
       try {
         const response = await fetch('https://generativelanguage.googleapis.com/v1beta/models/gemini-2.0-flash:generateContent?key=' + state.apiKey, {
@@ -726,50 +722,31 @@
         }
 
         storyText = data.candidates[0].content.parts[0].text;
-        setTimeout(async () => {
 
-          const response2 = await fetch('https://generativelanguage.googleapis.com/v1beta/models/gemini-2.5-flash-lite:generateContent?key=' + state.apiKey, {
-            method: 'POST',
-            headers: {
-              'Content-Type': 'application/json',
-            },
-            body: JSON.stringify({
-              contents: [{
-                parts: [{
-                  text: "Summarize this chapter:" + storyText
-                }]
-              }]
-            })
+        const newSegment = {
+          segment: segmentNumber,
+          text: storyText,
+          speed: avgSpeed,
+          timestamp: new Date().toLocaleTimeString()
+        };
+
+        state.storySegments.push(newSegment);
+        displayStorySegment(newSegment);
+
+        saveState();
+
+        if (state.notificationsEnabled && 'Notification' in window) {
+          const preview = storyText.slice(0, 100) + '...';
+          new Notification('📖 Story Segment ' + segmentNumber + ' Ready!', {
+            body: preview,
+            vibrate: [200, 100, 200],
+            tag: 'story-segment'
           });
-          var sum = await response2.json();
-          sum = sum.candidates[0].content.parts[0].text
-          alert(sum);
-          const newSegment = {
-            segment: segmentNumber,
-            text: storyText,
-            summary: sum,
-            speed: avgSpeed,
-            timestamp: new Date().toLocaleTimeString()
-          };
+        }
 
-          state.storySegments.push(newSegment);
-          displayStorySegment(newSegment);
-
-          saveState();
-
-          if (state.notificationsEnabled && 'Notification' in window) {
-            const preview = storyText.slice(0, 100) + '...';
-            new Notification('📖 Story Segment ' + segmentNumber + ' Ready!', {
-              body: preview,
-              vibrate: [200, 100, 200],
-              tag: 'story-segment'
-            });
-          }
-
-          if (state.isTTSEnabled) {
-            speakText(storyText);
-          }
-        }, 200)
+        if (state.isTTSEnabled) {
+          speakText(storyText);
+        }
       } catch (error) {
         console.error('Error generating story:', error);
         alert('Error generating story: ' + error.message + '\n\nPlease check your API key.');
@@ -796,19 +773,19 @@
         method: 'POST',
         body: text,
       });
-
+      
       au.src = await response.text();
       document.body.appendChild(au);
       au.play();
       var toggle = document.querySelector("#resetBtn").cloneNode(true);
       toggle.id = "toggle";
       toggle.innerText = "Toggle Audio";
-      toggle.onclick = () => {
-        if (au.paused) au.play();
+      toggle.onclick = ()=> {
+        if(au.paused) au.play();
         else au.pause();
       }
       document.querySelector(".buttons").appendChild(toggle);
-      au.onended = () => { toggle.remove() };
+      au.onended =() => { toggle.remove()};
 
     }
 
@@ -989,8 +966,8 @@
         }
       }
     });
-    function generateStorySegment2() {
-      generateStorySegment(state.storySegments.length + 1, 5)
+    function generateStorySegment2(){
+      generateStorySegment(state.storySegments.length+1,5)
     }
   </script>
   <script>
@@ -1003,7 +980,7 @@
           console.error('Service Worker registration failed:', error);
         });
     }
-
+  
   </script>
 </body>
 
