--- a/index.html
+++ b/index.html
@@ -717,7 +717,7 @@ function downloadTextFile(filename, text) {
         ) + '\n\nWrite ONLY the story segment, no meta-commentary. Make it exciting and match the running pace!';
 
       try {
-        const response = await fetch('https://generativelanguage.googleapis.com/v1beta/models/gemini-1.5-pro:generateContent?key=' + state.apiKey, {
+        const response = await fetch('https://generativelanguage.googleapis.com/v1beta/models/gemini-2.5-flash-lite:generateContent?key=' + state.apiKey, {
           method: 'POST',
           headers: {
             'Content-Type': 'application/json',
